fix Sonar issues